fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,5 @@
 /* css start here */
 
-* {box-sizing: border-box;
-}
 
 body {
       font-family: "Montserrat", "Open Sans", Helvetica, Arial, sans-serif;
@@ -10,15 +8,8 @@ body {
       align-items: center;
       min-height: 100vh;
       background-color: lavender;
-      border: solid purple;
-}
-
-main {
-    min-height: 100px;
-    min-width: 1rem;
-    background: lightblue;
-    padding: 1rem 2rem;
-    border-radius: 5rem; 
+      border: solid black;
+      padding-bottom: 5rem;
 }
 
 h1 {
@@ -39,18 +30,9 @@ img {
 
 /***************** NAV *****************/
 
-nav1 a:hover {
-  text-decoration: underline;
-}
-
 navbar-brand {
   text-align: center;
 }
-
-products a:hover {
-  text-decoration: underline;
-}
-
 
 /**************** HERO *****************/
 
@@ -92,4 +74,14 @@ h3 {
   font-size: 1.2rem;
   text-align: center;
   color: #2d2d2d;
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: black;
+   color: white;
+   text-align: center;
 }
